fix: implement proper data type in User and Transaction entities with correct validations